<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.gcox.createwallet.MainActivity"
        tools:showIn="@layout/activity_main">

        <EditText
            android:id="@+id/user_passphrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_a_passphrase" />

        <Button
            android:id="@+id/btn_create_wallet"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/user_passphrase"
            android:layout_centerHorizontal="true"
            android:text="@string/create_wallet" />

        <TextView
            android:id="@+id/output_json"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_create_wallet"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/output_json" />

        <TextView
            android:id="@+id/create_new_private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/output_json"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/created_private_key" />


        <Button
            android:id="@+id/btn_restore_wallet"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/create_new_private_key"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/restore_wallet" />

        <TextView
            android:id="@+id/output_restore_json"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_restore_wallet"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/output_restore_son" />

        <TextView
            android:id="@+id/restore_private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/output_restore_json"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:text="@string/restore_private_key" />

    </RelativeLayout>

</ScrollView>

